# nns_benchmark

./: .gitignore  README.html  README.md  kgraph.cpp  test.txt
algorithms/: README.html  README.md  readme.md
algorithms/AGH/: README.md
algorithms/AGH/preprocess/: OneLayerAGH_Test.m  OneLayerAGH_Train.m  TwoLayerAGH_Test.m  TwoLayerAGH_Train.m  fvecs_read.m  get_anchor.m  ivecs_read.m  main.m  main_OneLayer.m  main_TwoLayer.m  main_c.m  main_c_OneLayer.m  main_c_OneLayer.m~  main_c_TwoLayer.m  main_c_TwoLayer.m~  readme.txt  run.m
algorithms/AGH/script/: searcher.sh
algorithms/AGH/search/: AGH.cpp  AGH.h  Makefile  data_util.h  eval.h
algorithms/AGH/src/: AGH.cpp  AGH.h  Makefile  center_chooser.h  data_util.h  eval.h  hammingDist.h  heap.h  random.h
algorithms/Annoy/: Makefile  README.html  README.md  main.cpp  main.cpp~
algorithms/Annoy/script/: indexer.sh  run.sh  searcher.sh
algorithms/Annoy/src/: Makefile  annoy.cpp  indexer.cpp  searcher.cpp
algorithms/DPG/: README.html  README.md  kgraph.h  main.cpp  metric.cpp
algorithms/DPG/script/: build_index.sh  search.sh
algorithms/DPG/src/: DPG_diverse.cpp  DPG_index.cpp  DPG_search.cpp  (+6 more)
algorithms/KGraph/: Makefile  README.html  README.md  RandGen.cpp  build.sh  convert_data.sh  fvec2lshkit.cpp  kgraph-data.h  kgraph.cpp  kgraph.h  kgraph_index.sh  kgraph_search.sh  metric.cpp  search.cpp
algorithms/NMSLIB/: CMakeLists.txt~  README.md
algorithms/NSH/: README.md
algorithms/NonMetricSpaceLib/: CMakeLists.txt  Makefile  README.html  README.md  README.md~  cmake_install.cmake  readme.md~
algorithms/OPQ/: CMakeLists.txt  README.html  README.md  data_util.cpp  data_util.h  indexer.h  indexer_launcher.cpp  multitable.hpp  ordered_lists_merger.h  perfomance_util.cpp  perfomance_util.h  run_searcher_vlad.py  searcher.h  searcher_tester.cpp
algorithms/OPQ/src/: CMakeLists.txt  IndexerLauncher.cmake  NearestSearch.cmake  SearcherTester.cmake  build_debug.sh  build_release.sh  indexer_launcher.cpp  make_project.bat  run_indexer.py  run_indexer_vlad.py  run_searcher.py  searcher_tester.cpp
algorithms/QALSH/: Makefile  README.md
algorithms/RCT/: Makefile  README.html  README.md  data_util.h  indexer.cpp  random.cpp  random.h  rct.h  searcher.cpp
algorithms/SGH/: README.md
algorithms/SH/: README.md  SHgeneral.cpp  SHindex.cpp  SHindex.h  SHselection.h  constants.h  data.h  knn.h  main.cpp  main.cpp~  myrandom.cpp  statisticsmodule.h
algorithms/SRS/: ParamFile.cpp  ParamFile.h  README.html  README.md  SRSCoverTree.cpp  SRSInMemory.h  cal_param.cpp  gen_gt.cpp  srs.cpp
algorithms/flann/: CMakeLists.txt~  README.html  README.md
algorithms/flann/code/examples/: CMakeLists.txt  GIST_flann_auto_example.cpp~  GIST_flann_h_kmeans_example.cpp~  GIST_flann_kdtree_example (copy).cpp~  GIST_flann_kdtree_example.cpp~  GIST_flann_linear_example.cpp~  MNIST_flann_auto_example.cpp~  MNIST_flann_h_kmeans_example.cpp~  MNIST_flann_kdtree_example (copy).cpp~  MNIST_flann_kdtree_example.cpp~  MNIST_flann_linear_example.cpp~  SIFT_flann_auto_example.cpp~  SIFT_flann_h_kmeans_example.cpp~  SIFT_flann_kdtree_example (copy).cpp~  SIFT_flann_kdtree_example.cpp~  SIFT_flann_linear_example (copy).cpp~  SIFT_flann_linear_example.cpp~  audio_flann_auto_example.cpp~  audio_flann_h_kmeans_example.cpp~  audio_flann_kdtree_example.cpp~  audio_flann_kdtree_tunning.cpp~  audio_flann_linear_example.cpp~  build_auto.cpp  build_auto.cpp~  build_hkmeans.cpp~  build_kdtree.cpp  build_kdtree.cpp~  cifar10_flann_auto_example.cpp~  cifar10_flann_h_kmeans_example.cpp~  cifar10_flann_kdtree_example.cpp~  cifar10_flann_linear_example.cpp~  flann_auto_example.cpp~  flann_example.cpp~  flann_h_kmeans_example.cpp~  flann_kdtree_example.cpp~  flann_kdtree_tunning.cpp~  flann_linear_example.cpp~  get_kdtree_level.cpp~  glove_flann_auto_example.cpp~  glove_flann_h_kmeans_example.cpp~  (+22 more)
algorithms/flann/examples/: CMakeLists.txt  flann_example.c
algorithms/flann/examples/auto_tunning/: flann_auto_Dim.cpp  flann_auto_K.cpp  flann_auto_RC (copy).cpp  flann_auto_example.cpp  flann_auto_loadIndex.cpp  flann_auto_randomquery.cpp
algorithms/flann/examples/auto_tunning/old/: MNIST_flann_auto_example.cpp  audio_flann_auto_example.cpp  cifar10_flann_auto_example.cpp  flann_auto_example_Sample.cpp  flann_auto_example_randomquery.cpp  flann_auto_mAP.cpp  flann_auto_tunning_loadindex.cpp  flann_auto_tunning_loadindex_randomquery.cpp  gist_flann_auto_example.cpp  glove_flann_auto_example.cpp  hard_flann_auto_example.cpp  ran_flann_auto_example.cpp  sift_flann_auto_example.cpp  sun397_flann_auto_example.cpp  trevi_flann_auto_example.cpp  youtube_flann_auto_example.cpp
algorithms/flann/examples/hkmeans_tunning/: flann_h_kmeans_example.cpp  flann_h_kmeans_example_randomquery.cpp  flann_h_kmeans_tunning_loadindex.cpp  flann_kmeans_example.cpp
algorithms/flann/examples/hkmeans_tunning/old/: MNIST_flann_h_kmeans_example.cpp  audio_flann_h_kmeans_example.cpp  cifar10_flann_h_kmeans_example.cpp  gist_flann_h_kmeans_example.cpp  glove_flann_h_kmeans_example.cpp  hard_flann_h_kmeans_example.cpp  ran_flann_h_kmeans_example.cpp  sift_flann_h_kmeans_example.cpp  sun397_flann_h_kmeans_example.cpp  trevi_flann_h_kmeans_example.cpp  youtube_flann_h_kmeans_example.cpp
algorithms/flann/examples/kdtree_tunning/: flann_kdtree_tunning.cpp  flann_kdtree_tunning_loadindex.cpp  flann_kdtree_tunning_randomquery.cpp
algorithms/flann/examples/kdtree_tunning/old/: MNIST_flann_kdtree_tunning.cpp  audio_flann_kdtree_tunning.cpp  cifar10_flann_kdtree_tunning.cpp  gist_flann_kdtree_tunning.cpp  glove_flann_kdtree_tunning.cpp  hard_flann_kdtree_tunning.cpp  ran_flann_kdtree_tunning.cpp  sift_flann_kdtree_tunning.cpp  sun397_flann_kdtree_tunning.cpp  trevi_flann_kdtree_tunning.cpp  youtube_flann_kdtree_tunning.cpp
algorithms/flann/examples/linear/: answer_of_quality.cpp  flann_linear_example.cpp  flann_linear_example_randomquery.cpp
data/: Dataset_Link  README.html  README.md  audio_groundtruth.ivecs  audio_query.fvecs  readme.md
data/transformer/: README.md
index/: readme.md
(+257 files in other folders)
